--- a/languages/english.xml
+++ b/languages/english.xml
@@ -35,8 +35,9 @@ $txt['NiceTooltips_TEXTSIZE'] = '[NiceTooltips] Font size of the text inside the
 $txt['NiceTooltips_CAPCOLOR'] = '[NiceTooltips] Color of the tooltip caption text. A string value. See NOTE above.';
 $txt['NiceTooltips_OPACITY'] = '[NiceTooltips] Opacity of the tooltip. An integer value (1-100).';
 $txt['NiceTooltips_DELAY'] = '[NiceTooltips] Tooltip will popup only after a certain delay specified in millisecs. An integer value.';
-$txt['permissionname_disable_nicetooltips'] = 'Don\'t see nice tooltips (NiceTooltips Mod)';
+$txt['permissionname_disable_nicetooltips'] = 'Don\'t show nice tooltips (NiceTooltips Mod)';
 $txt['permissionhelp_disable_nicetooltips'] = 'Disable NiceTooltips Mod for this group.';
+$txt['NiceTooltips_mobile'] = '[NiceTooltips] Show tooltips on mobile devices';
 // Nice Tooltips mod *
 ]]></add>
     </operation>
